--- a/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
+++ b/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
@@ -18,14 +18,14 @@
 
 $theme.include($body_top_include)
 
-<div class="alert-error red-alert">
-  <div class="container">
-    <p>
-     Due to Torpical Storm Gena, Citizens has suspended writing any new policies until further notice.
-    </p>
-    <a href="#" class="close">×</a>
-  </div>
-</div>
+#if ($alert_message)
+	<div class="alert-error red-alert">
+	  <div class="container">
+	    $alert_message
+	    <a href="#" class="close">×</a>
+	  </div>
+	</div>
+#end
 
 #dockbar()
 
