--- a/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
+++ b/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
@@ -18,7 +18,7 @@
 
 $theme.include($body_top_include)
 
-ID: $theme.getSetting("alert-message-article-id") <br/>
+ID2: $theme.getSetting("alert-message-article-id") <br/>
 Message: $alert_message
 
 
