Another try for alert message

--- a/citizensfla-theme/src/main/webapp/templates/init_custom.vm
+++ b/citizensfla-theme/src/main/webapp/templates/init_custom.vm
@@ -3,4 +3,4 @@
 
 #set ($css_class = "${css_class} dockbar-split")
 
-#set ($alert_message = $journalContentUtil.getContent($group_id, $theme.getSetting("alert-message-article-id"), null, "$locale", $theme_display))
+#set ($alert_message = $journalContentUtil.getContent($group_id, $theme.getSetting('alert-message-article-id'), null, "$locale", $theme_display))
