--- a/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
+++ b/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
@@ -18,7 +18,8 @@
 
 $theme.include($body_top_include)
 
-<!-- ID2: $theme.getSetting('alert-article-id') -->
+<!-- ID2: $theme.getSetting('alert-message-article-id') -->
+<!-- ID3: $theme_display.getThemeSetting('alert-message-article-id') -->
 <!-- Message: $alert_message -->
 
 
