fix alert (dropdown)

--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -261,6 +261,9 @@ body {
 						width: 284px;
 						height: 145px;
 						overflow: hidden;
+						.alert.alert-error {
+    						display: none;
+						}
 						.portlet-content {
 							position: relative;
 						}
