--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -309,7 +309,7 @@ body {
 								border: 0;
 								color: #fff !important;
 								line-height: 14px;
-								font-size: 15px;
+								font-size: 12px;
 								overflow: hidden;
 							}
 							.navigation {
@@ -1035,6 +1035,7 @@ body {
 						&:hover, &:focus {
 							text-decoration: none;
 							color: rgb(0, 0, 0);
+							border-bottom: 2px solid #000;
 						}
 						.icon-caret-down {
 							margin: 0px !important;
@@ -1390,7 +1391,12 @@ body {
 			padding: 4px 10px;
 			font-size: 11px;
 			line-height: 12px;
-			background-position: 0 0;
+			background-position: 0px 0 !important;
+			background-size: 100% !important;
+			&:hover {
+				text-decoration: none;
+				@include box-shadow(0px 0px 75px 39px rgba(0, 0, 0, 0.4) inset);
+			}
 		}
 		.carousel {
 			.carousel-title {
@@ -1694,8 +1700,15 @@ body {
 				font-size: 13px;
 			}
 		}
+		.category span.title {
+			font-size: 31px;
+			line-height: 33px;
+		}
 		.category .col-sm-12.col-md-4.col-lg-4 a {
 			height: 173px;
+			font-size: 16px;
+			line-height: 19px;
+			background-position: 0px 280px !important;
 		}
 		.carousel {
 			.carousel-title {
@@ -1797,21 +1810,23 @@ body {
 		}
 		.category {
 			span.title {
-				font-size: 35px;
-				line-height: 40px;
+				font-size: 31px;
+				line-height: 33px;
 			}
 			.col-sm-12.col-md-4.col-lg-4 a {
 				height: 314px;
-				font-size: 20px;
-				line-height: 24.1px;
-				background-position: 0 0;
+				font-size: 16px;
+				line-height: 19px;
+				padding: 24px 30px;
+				background-position: 0 0 !important;
 				background-repeat: no-repeat;
-				background-size: cover;
+				background-size: 108% !important;
 				background-color: #2A3B4B;
-				&:hover {
-					text-decoration: none;
-					@include box-shadow(0px 0px 75px 39px rgba(0, 0, 0, 0.4) inset);
-				}
+			}
+			.col-sm-12.col-md-4.col-lg-4.two a {
+				height: 157px;
+				background-position: 0px -180px !important;
+				background-size: 130% auto !important;
 			}
 			.policy {
 				background: url("@theme_image_path@/custom/policy_bg.jpg") no-repeat 0 0 / cover #2A3B4B;
@@ -1853,11 +1868,10 @@ body {
 		}
 		.category .col-sm-12.col-md-4.col-lg-4 a {
 			height: 383px;
-			background-position: 0 0;
+			background-position: 0 0 !important;
 		}
 		.category .col-sm-12.col-md-4.col-lg-4.two a {
 			height: 191px;
-			background-position: 0px -160px !important;
 			&:first-child {
 				height: 192px;
 			}
