--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -1469,6 +1469,10 @@ body {
 		}
 		#_145_searchDropdown {
 			width: auto !important;
+			min-width: 30px;
+			.icon-caret-down {
+				margin-right: 9px;
+			}
 			a {
 				padding: 6px 7px 6px 1px !important;
 			}
@@ -1544,6 +1548,9 @@ body {
 		}
 		#_145_searchDropdown {
 			width: 110px !important;
+			.icon-caret-down {
+				margin-right: -7px;
+			}
 			a {
 				padding: 6px 7px 6px 1px !important;
 			}
